// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`random should chain deep sequences correctly 1`] = `"kQDxNqAoEMISS0NuoOxsArT7HiFb0LNnfMGsuaevYviko-5y"`;

exports[`random should chain deep sequences correctly 2`] = `"kQCyBjW6rtCuAEAmURZxQp5n67NrvQuckN0m6fQp3cHiAOeb"`;

exports[`random should chain deep sequences correctly 3`] = `"kQDXBuOT_Y2F2FrqDubvzH6UCyQUa8hIp-EOnTU9Nl5EAwFx"`;

exports[`random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQDxNqAoEMISS0NuoOxsArT7HiFb0LNnfMGsuaevYviko-5y",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 15359n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDxNqAoEMISS0NuoOxsArT7HiFb0LNnfMGsuaevYviko-5y",
            "to": "kQCyBjW6rtCuAEAmURZxQp5n67NrvQuckN0m6fQp3cHiAOeb",
            "type": "internal",
            "value": "9.97272",
          },
        ],
      },
    ],
  },
]
`;

exports[`random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQDxNqAoEMISS0NuoOxsArT7HiFb0LNnfMGsuaevYviko-5y",
          "to": "kQCyBjW6rtCuAEAmURZxQp5n67NrvQuckN0m6fQp3cHiAOeb",
          "type": "internal",
          "value": "9.97272",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13880n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQCyBjW6rtCuAEAmURZxQp5n67NrvQuckN0m6fQp3cHiAOeb",
            "to": "kQDXBuOT_Y2F2FrqDubvzH6UCyQUa8hIp-EOnTU9Nl5EAwFx",
            "type": "internal",
            "value": "9.950442",
          },
        ],
      },
    ],
  },
]
`;

exports[`random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQCyBjW6rtCuAEAmURZxQp5n67NrvQuckN0m6fQp3cHiAOeb",
          "to": "kQDXBuOT_Y2F2FrqDubvzH6UCyQUa8hIp-EOnTU9Nl5EAwFx",
          "type": "internal",
          "value": "9.950442",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13808n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDXBuOT_Y2F2FrqDubvzH6UCyQUa8hIp-EOnTU9Nl5EAwFx",
            "to": "kQDXBuOT_Y2F2FrqDubvzH6UCyQUa8hIp-EOnTU9Nl5EAwFx",
            "type": "internal",
            "value": "9.928424",
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQDXBuOT_Y2F2FrqDubvzH6UCyQUa8hIp-EOnTU9Nl5EAwFx",
          "to": "kQDXBuOT_Y2F2FrqDubvzH6UCyQUa8hIp-EOnTU9Nl5EAwFx",
          "type": "internal",
          "value": "9.928424",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4360n,
      },
    ],
  },
]
`;
